# actix-postgres

./: .gitignore  .rustfmt.toml  Cargo.toml  req.json  upd.json
migrations/2020-04-24-072701_crete_employees/: up.sql
src/: auth.rs  database.rs  envdata.rs  errors.rs  main.rs  model.rs  routes.rs  schema.rs  utility.rs
src/controllers/: health.rs  mod.rs  users.rs
src/models/: mod.rs  schema.rs  users.rs
