[package]
name = "actix-pogtgres"
version = "0.1.0"
authors = ["peshwar9"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0"
actix-rt = "1.0"
futures = "0.3.4"
serde = "1.0.106"
serde_json = "1.0"
diesel = { version = "1.0.0", features = ["postgres","r2d2"]}
dotenv = "0.9.0"
"r2d2" = "0.8.8"
derive_more = "0.99.2"
